--- a/_posts/2022-02-27-스프링부트 이해와 원리(3).md
+++ b/_posts/2022-02-27-스프링부트 이해와 원리(3).md
@@ -2,8 +2,8 @@
 title: "Spring Boot"
 date: 2022-02-21 00:00:28 -0400
 draft: false
-description: "[WEB] 토비의 스프링 부트 - 이해와 원리"
-categories: [WEB]
+description: "[Spring Boot] 토비의 스프링 부트 - 이해와 원리"
+categories: [Spring Boot]
 toc : true
 toc_sticky : true
 toc_label : 목차
