--- a/_posts/2022-02-21-스프링부트 이해와 원리(1).md
+++ b/_posts/2022-02-21-스프링부트 이해와 원리(1).md
@@ -1,5 +1,5 @@
 ---
-title: "Spring Boot"
+title: "Spring Boot란?"
 date: 2022-02-21 00:00:28 -0400
 draft: false
 description: "[Spring Boot] 토비의 스프링 부트 - 이해와 원리"
