--- a/_posts/2022-02-22-스프링부트 이해와 원리(2).md
+++ b/_posts/2022-02-22-스프링부트 이해와 원리(2).md
@@ -12,7 +12,7 @@ toc_label : 목차
 # Spring Boot 시작하기
 
 ### intellij - sdkman java 설치 경로로 설정
-![img_1.png](imgage/img_1.png)
+![img_1.png](image/img_1.png)
 
 ### API Test
 - HTTP 요청을 만들고 응답을 확인하는데 사용되는 도구<br/>
@@ -23,7 +23,7 @@ toc_label : 목차
 &nbsp;&nbsp; 5. JUnitT Test<br/>
 
 ### Web 어플리케이션 동작 방식
-![img_2.png](imgage/img_2.png)
+![img_2.png](image/img_2.png)
 
 **Reqeuset**
 - Request Line : Method(GET, POST, PUT, PATCH, DELETE), Path, HTTP Version
@@ -35,7 +35,7 @@ toc_label : 목차
 - Headers(Content-Type, Content-Length)
 - Message Body
 
-### Containerless 개발
+### Stand Alone Servlet Container 개발
 ```java
 package tobyspring.helloboot;
 
@@ -74,7 +74,7 @@ public class HellobootApplication {
 <br/>
 
 - ServletContainer 설치/배포 없이 java 코드로 sevlet 등록 및 매핑 작업과정 작성
-![img_5.png](imgage/img_5.png)
+![img_5.png](image/img_5.png)
 ```java
 package tobyspring.helloboot;
 
@@ -152,7 +152,7 @@ public class HellobootApplication {
 - front controller : 어떤 로직을 수행할지 메서드 매핑, 공통작업은 front controller에서 처리(인증, 보안, 다국어 처리)하고 그 후 로직은 다른 object에 위임.
 1. mapping : request에 들어있는 정보를 통해 어떠한 로직을 수행할지 결정하는 작업.
 2. binding : controller를 만들때 직접 req, resp object를 직접 다루기 보다 request 타입을 평범한 java type(dto, java bean...)으로 변환
-![img_6.png](imgage/img_6.png)
+![img_6.png](image/img_6.png)
 <br/>
 
 ```java
