image import 경로 수정

--- a/_posts/2022-02-21-스프링부트 이해와 원리(1).md
+++ b/_posts/2022-02-21-스프링부트 이해와 원리(1).md
@@ -14,7 +14,7 @@ toc_label : 목차
 ### 스프링 부트란?
 
 - 스프링을 확장하고 있는 프레임워크, 유용한 라이브러리
-- **스프링 기반**으로 실무 환경에 사용 가능한 수준의 독립실행형 어플리케이션을 빠르게 작성할 수 있게 도와주는 여러가지 도구의 모음</br>
+- **스프링 기반**으로 실무 환경에 사용 가능한 수준의 독립실행형 어플리케이션을 빠르게 작성할 수 있게 도와주는 여러가지 도구의 모음<br/>
 - :bulb: 스프링 !== 스프링 부트
 
 ### 스프링 부트의 핵심 목표
@@ -36,9 +36,9 @@ toc_label : 목차
   매핑(라우팅) 작업
 - Spring Container : Servlet Container 뒷단에서 작업하는 Bean <br/>
 - Servlet Container and Spring Container
-![img.png](./image/img.png) <br/>
+![](./image/img.png) <br/>
 - Standalone application
-![img_3.png](./image/img_3.png)<br/>
+![](./image/img_3.png)<br/>
 
 ### Servlet Container VS Spring Container <br/><br/><br/><br/><br/>
 
