--- a/_posts/2022-02-27-스프링부트 이해와 원리(3).md
+++ b/_posts/2022-02-27-스프링부트 이해와 원리(3).md
@@ -10,6 +10,6 @@ toc_label : 목차
 ---
 
 ### Stand Alone Spring Container  개발
-![img.png](./image/6eb9fcd7.png)
+![](./image/6eb9fcd7.png)
 ![](./image/6eb9fcd6.png)
 https://docs.spring.io/spring-framework/docs/5.3.x/reference/html/core.html#spring-core
