스프링부트 이해와 원리(3) 중간 커밋

--- a/_posts/2022-02-21-스프링부트 이해와 원리(1).md
+++ b/_posts/2022-02-21-스프링부트 이해와 원리(1).md
@@ -36,9 +36,9 @@ toc_label : 목차
   매핑(라우팅) 작업
 - Spring Container : Servlet Container 뒷단에서 작업하는 Bean <br/>
 - Servlet Container and Spring Container
-![](./image/img.png) <br/>
+![](images/img.png) <br/>
 - Standalone application
-![](./image/img_3.png)<br/>
+![](images/img_3.png)<br/>
 
 ### Servlet Container VS Spring Container <br/><br/><br/><br/><br/>
 
