스프링부트 이해와 원리(3) 중간 커밋

--- a/_posts/2022-02-21-스프링부트 이해와 원리(1).md
+++ b/_posts/2022-02-21-스프링부트 이해와 원리(1).md
@@ -35,9 +35,9 @@ toc_label : 목차
 - Web Container(Servlet Container) : life cycle 관리, 여러개의 web component(Servlet)들을 관리, request와 web component(Servlet)
   매핑(라우팅) 작업
 - Spring Container : Servlet Container 뒷단에서 작업하는 Bean <br/>
-- Servlet Container and Spring Container
-![](images/img.png) <br/>
-- Standalone application
+- Servlet Container and Spring Container<br/>
+![](images/img.png) <br/><br/>
+- Standalone application<br/>
 ![](images/img_3.png)<br/>
 
 ### Servlet Container VS Spring Container <br/><br/><br/><br/><br/>
