--- a/_posts/2022-02-27-스프링부트 이해와 원리(3).md
+++ b/_posts/2022-02-27-스프링부트 이해와 원리(3).md
@@ -10,15 +10,14 @@ toc_label : 목차
 ---
 
 ### Stand Alone Spring Container  개발
-![](images/6eb9fcd7.png)
-<br/>
-- Spring Container : Business Object Code와 Configuration Metadata를 조합하여 내부의 bean object를 구성 -> server application으로 만들어줌.
+![](images/6eb9fcd7.png)<br/>
+- Spring Container : Business Object Code와 Configuration Metadata를 조합하여 내부의 bean object를 구성 -> server application으로 만들어줌.<br/><br/>
 
-![](images/6eb9fcd6.png)
-https://docs.spring.io/spring-framework/docs/5.3.x/reference/html/core.html#spring-core
+![](images/6eb9fcd6.png)<br/>
+https://docs.spring.io/spring-framework/docs/5.3.x/reference/html/core.html#spring-core<br/><br/>
 
 ### Depentency Injection
-![](images/e4e74322.png)
+![](images/e4e74322.png)<br/>
 - HelloController는 SimpleHelloService에 의존하고 있음.
 - 다른 서비스를 적용하고 싶거나 다른 클래스를 참조하게 되면 HelloController에 수정이 필요함.
 
