--- a/_posts/2023-03-07-스프링 핵심 원리 기본편(1).md
+++ b/_posts/2023-03-07-스프링 핵심 원리 기본편(1).md
@@ -55,30 +55,60 @@ toc_label : 목차
 
 
 ### SOLID
+
 #### SRP : 단일 책임 원칙(single responsibility principle)
 - 한 클래스는 하나의 책임만 가져야 한다.
 - 변경이 있을 때 파급 효과가 적으면 단일 책임 원칙을 잘 따른 것
+
 #### OCP : 개방-폐쇄 원칙(Open/closed principle)
 - 확장에는 열려있으나 변경에는 닫혀 있어야 한다.
 - 다형성을 활용하라.
 - 인터페이스를 구현한 새로운 클래스를 하나 만들어서 새로운 기능을 구현
-- 다형성을 사용했지만 OCP 원칙을 지키지 못할 경우는 어떻게 해야하나? 연관관계를 맺어주는 별도의 조립, 설정자가 필요
+- 어플리케이션을 사용영역과 구성영역으로 나눔.
+ 
 #### LSP : 리스코프 치환 원칙(Liskov substitution principle)
 - 프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 함.
 - 하위클래스 is a kind of 상위클래스(하위 분류는 상위 분류의 한 종류이다.)
 - 구현클래스 is able to 인터페이스(구현 분류는 인터페이스 할 수 있다.)
 - 즉 하위클래스의 인스턴스는 상위형 객체 참조 변수에 대입해 상위 클래스 인스턴스 역할을 하는데 문제가 없어야 한다.
-#### ISP : 인터페이스 분리 원칙(Interfaceㅁ segregation principle)
+
+#### ISP : 인터페이스 분리 원칙(Interface segregation principle)
 - "클라이언트는 자신이 사용하지 않는 메서드에 의존관계를 맺으면 안된다."&nbsp;&nbsp;&nbsp;&nbsp;-로버트 C.마틴-
 - 하나의 범용 인터페이스보다는 여러개의 구체적인 인터페이스가 낫다.
+
 #### DIP : 의존관계 역전 원칙(Dependency inversion principle)
 - 추상화에 의존해야지, 구체화에 의존하면 안된다.
-- 역할(Role)에 의존해야지 구현에 의존하면 안된다.
-- 다형성 만으로는 구현 객체를 변경할때 클라이언트 코드도 함께 변경된다. 다형성 만으로는  OCP, DIP를 지킬 수 없다. 뭔가가 더 필요하다.
-  <br/>
-  <br/>
+- 역할(Role)에 의존해야지 구현에 의존하면 안된다. 
+- 의존성 주입은 이 원칙을 따르는 방법 중 하나다.
+<br/><br/>
+
+#### 다형성 만으로는 구현 객체를 변경할때 클라이언트 코드도 함께 변경된다. 다형성 만으로는  OCP, DIP를 지킬 수 없다. 뭔가가 더 필요하다.
+<br/>
 
 #### 정리
+
 1. 모든 설계에 역할과 구현을 분리하자
 2. 이상적으로는 모든 설계에 인터페이스를 부여하자, 하지만 추상화라는 비용이 발생한다
 3. 기능을 확장할 가능성이 없다면, 구체 클래스를 직접 사용하고, 향후 꼭 필요할 때 리팩터링해서 인터페이스를 도입하는 것도 방법이다
+<br/><br/>
+
+### IoC, DI, Container
+
+#### 제어의 역전 IoC(Inversion of Control)
+- 프로그램에 대한 제어 흐름에 대한 권한은 모두 AppConfig가 갖고 있음.
+- 제어의 흐름을 직접 제어하는 것이 아닌, 외부에서 관리하는 것을 IoC라 한다.
+
+### 프레임워크 VS 라이브러리
+- 프레임워크가 내가 작성한 코드를 제어하고, 대신 실행하면 프레임워크 (제어의 역전, ex. Junit)
+- 내가 작성한 코드가 직접 제어의 흐름을 담당한다면 라이브러리(ex. XML, JSON으로 변환하는 메서드 호출)
+
+### 의존관계 주입 DI(Dependency Injection)
+- 인터페이스(추상)에만 의존한다. 실제 어떤 구현 객체가 사용될지는 모른다.
+- 정적인 클래스 의존관계와, 실행 시점에 결정되는 동적인 객체(인스턴스) 의존 관계 둘을 분리해서 생각해야 한다.
+- 의존관계 주입을 사용하면, 정적인 클래스 의존관계를 변경하지 않고, 동적인 객체 인스턴스 의존관계를 쉽게 변경할 수 있다.
+
+
+**AppConfig처럼 객체를 생성하고 관리하면서 의존관계를 연결해 주는 것을  IoC 컨테이너/DI컨테이너라고 한다.**
+
+
+참고서적 : 조영호 객체지향의 사실과 오해
