스프링 강의 정리

--- a/_posts/2023-03-07-스프링 핵심 원리 기본편(4).md
+++ b/_posts/2023-03-07-스프링 핵심 원리 기본편(4).md
@@ -12,7 +12,7 @@ toc_label : 목차
 ### 의존관계 주입 방법
 
 #### 생성자 주입
-- 생성자 호출 시점에 딱 1번만 호춣되는 것이 보장된다.
+- 생성자 호출 시점에 딱 1번만 호출되는 것이 보장된다.
 - 불편, 필수 의존관계에 사용
 - 생성자가 딱 1개만 있다면 @Autowired 생략 가능!
 
@@ -65,3 +65,66 @@ toc_label : 목차
 - 스프링 컨테이너 생성 -> 스프링 빈 생성 -> 의존관계 주입 -> 초기화 콜백 -> 사용 -> 소멸전 콜백 -> 스프링 종료
 - 초기화 콜백 : 빈이 생성되고, 빈의 의존관계 주입이 완료된 후 호출
 - 소멸전 콜백 : 빈이 소멸되기 직전에 호출
+
+### 빈 스코프
+스코프란? : 빈이 존재할 수 있는 범위
+
+- 싱글톤 : 기본 스코프, 스프링 컨테이너의 시작과 종료까지 유지되는 가장 넓은 범위의 스코프
+- 프로토타입 : 스프링 컨테이너는 빈의 생성과 의존관계 주입까지만 관여하고 더는 관리하지 않는 
+매우 짧은 범위의 스코프
+- 웹 관련 스코프 
+  - request : 웹 요청이 들어오고 나갈때까지 유지되는 스코프
+  - session : 웹 세션이 생성되고 종료될 때 까지 유지되는 스코프
+  - application : 웹의 서블릿 컨텍스트와 같은 범위로 유지되는 스코프
+
+### 프로토타입 스코프
+싱글톤 스코프의 빈을 조회하면 스프링 컨테이너는 항상 같은 인스턴스의 스프링 빈을 반환한다.
+반면에 프로토타입 스코프를 스프링 컨테이너에 조회하면 컨테이너는 항상 새로운 인스턴스를 생성해서 반환한다.
+
+**싱글톤 빈 요청**<br/>
+![](images/e0e85a35.png)<br/><br/>
+
+**프로토타입 빈 요청**<br/>
+![](images/d1d4d895.png)<br/>
+![](images/0ed5cd5a.png)<br/><br/>
+
+여기서 핵심은 스프링 컨테이너는 프로토타입 빈을 생성하고, 의존관계 주입, 초기화까지만 처리한다는 것이다.
+클라이언트에 빈을 반환하고, 이후 스프링 컨테이너는 생성된 프로토타입 빈을 관리하지 않는다.
+프로토타입 빈을 관리할 책임은 프로토타입 빈을 받은 클라이언트에 있다.
+그래서 `@PreDestroy`  같은 종료 메서드가 호출되지 않는다. <br/><br/>
+
+싱글톤 빈은 스프링 컨테이너 생성 시점에 초기화 메서드가 실행되지만, 
+프로토타입 스코프 빈은 컨테이너에서 빈을 조회할 때 생성되고, 초기화 메서드도 실행된다.
+싱글톤 빈은 스프링 컨테이너가 관리하기 때문에 스프링 컨테이너가 종료될 때 빈의 종료 메서드가 실행되지만, 
+프로토타입 빈은 스프링 컨테이너가 생성과 의존관계 주입 그리고 초기화 까지만 관여하고, 더는 관리하지 않는다.
+따라서 프로토타입 빈은 스프링 컨테이너가 종료될 때 `@PreDestroy` 같은 종료 메서드가 전혀 실행되지 않는다.
+프로토 타입 빈을 조회한 클라이언트가 관리해야한다. 종료 메서드에 대한 호출도 클라이언트가 직접 해야한다.
+
+
+### 프로토타입 스코프 - 싱클톤 빈과 함께 사용시 문제점
+스프링 컨테이너에 프로토타입 스코프의 빈을 요청하면 항상 새로운 객체 인스턴스를 생성해서 반환한다.
+하지만 싱글톤 빈과 함께 사용할 때는 의도한 대로 잘 동작하지 않아 주의가 필요하다.</br></br>
+
+![](images/71eef1f3.png)</br>
+![](images/9dda8b95.png)</br></br></br>
+
+![](images/410785ed.png)
+![](images/822d1b99.png)</br>
+![](images/933c8119.png)</br></br></br>
+
+스프링은 일반적으로 싱글톤 빈을 사용하므로, 싱글톤 빈이 프로토타입 빈을 사용하게 된다.
+그런데 싱글톤 빈은 생성 시점에만 의존관계 주입을 받기 때문에, 프로토타입 빈이 새로 생성되기는 하지만,
+싱글톤 빈과 함께 계속 유지되는 것이 문제다.
+
+의존관계를 외부에서 주입(DI)받는게 아니라 필요한 의존관계를 찾는 것을
+Dependency  Lookup(DL) 의존관계 조회(탐색) 이라고 한다.
+DL 기능만 제공하는 무언가 있으면 해결 가능함.
+
+### ObjectFactory, ObjectProvider
+ObjectProvider의 `getObject()` 를 호출하면 내부에서는 스프링 컨테이너를 통해 해당 빈을 찾아서
+반환한다. (DL)
+
+### 웹스코프
+- 웹 스코프는 웹 환경에서만 동작<br/>
+- 웹 스코프는 프로토타입과 다르게 스프링이 해당 스코프의 종료시점까지 관리한다. 따라서 종료 메서드가 호출된다.<br/>
+![](images/9e03fed1.png)
