jpa 기본편 1주차

--- a/_posts/2023-04-24-JPA 기본편.md
+++ b/_posts/2023-04-24-JPA 기본편.md
@@ -38,8 +38,8 @@ toc_label : 목차
 - 모든 객체를 미리 로딩할 수는 없음.
 - 계층 분할이 어렵다
 
-4. 데이터 식별 방법
-   ![](images/d1d26ccc.png)
+4. 데이터 식별 방법<br/>
+![](images/d1d26ccc.png)
 
 ### ORM
 
